# prosoftschool2023

./: .gitignore
devicemonitoringserver/: CMakeLists.txt  CMakeLists.txt.user.b90183f  MessageSerializator.h  abstractbaseencoderexecutor.h  abstractmessage.h  baseencoderexecutor.h  bigendian.h  command.cpp  command.h  command.h.autosave  commandcenter.cpp  commandcenter.h  commendCenter.h  common.h  devicemock.cpp  devicemock.h  devicemonitoringserver.cpp  devicemonitoringserver.h  deviceworkschedule.h  dummyencoderexecutor.h  encoderexecutor.cpp  encoderexecutor.h  encodingmodule.cpp  encodingmodule.h  error.h  main.cpp  message.h  messagecommand.cpp  messagecommand.h  messageencoder.cpp  messageencoder.h  messageerror.cpp  messageerror.h  messagemeterage.cpp  messagemeterage.h  messages.h  messageserializator.cpp  messageserializator.h  messageserializer.cpp  messageserializer.h  (+17 more)
devicemonitoringserver/algorithm/: multiply41.cpp  multiply41.h  rot3.cpp  rot3.h
devicemonitoringserver/commandCenter/: commandCenter.cpp  commandCenter.h
devicemonitoringserver/commandcenter/: commandcenter.cpp  commandcenter.h
devicemonitoringserver/crypter/: BitMirror.cpp  BitMirror.h  Multiply41.cpp  Multiply41.h  ROT3.cpp  ROT3.h  absractCrypter.h  crypterBase.cpp  crypterBase.h  mirror.cpp  mirror.h  stub.cpp  stub.h
devicemonitoringserver/message/: abstractmessage.cpp  abstractmessage.h  command.cpp  command.h  commandmessage.cpp  commandmessage.h  error.cpp  error.h  errormessage.cpp  errormessage.h  message.h  messages.h  meterage.cpp  meterage.h  meteragemessage.cpp  (+1 more)
(+20 files in other folders)
